--- a/index.html
+++ b/index.html
@@ -54,6 +54,24 @@
     </div>
   </div>
     </section>
+    <div>
+    <h2>Formulaire Formateur</h2>
+    <form>
+        <div class="form-group">
+          <label for="exampleInputEmail1">Adresse mail</label>
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="email@email.fr">
+        </div>
+        <div class="form-group">
+          <label for="exampleInputPassword1">Mot de passe</label>
+          <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Mot de passe">
+        </div>
+        <div class="form-check">
+          <input type="checkbox" class="form-check-input" id="exampleCheck1">
+          <label class="form-check-label" for="exampleCheck1">Etes-vous développeur ?</label>
+        </div>
+        <button type="submit" class="btn btn-primary">Envoyer</button>
+      </form>
+    </div>
 </main>
 
 <footer>
