--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
   <title>Menu Accordéon Bootstrap</title>
 </head>
 <body>
-    <header>
+  <h1>Bonjour</h1>
 
-    </header>
 <main>
     <section>
         
