--- a/index.html
+++ b/index.html
@@ -74,7 +74,16 @@
 </main>
 
 <footer>
-    
+  <div class="container mx-auto">
+    <div class="row mx-auto">
+        <div class="col-2 "><img src="image/3.png" alt="logo facebook" height="100px" width="100px"></div>
+        <div class="col-2 "><img src="image/4.png" alt="logo insta" height="100px" width="100px"></div>
+        <div class="col-2 mt-3"><a href="mentions.php">Mentions légales</a><br><i class="fa fa-copyright" aria-hidden="true">2022 Funky Boys Studios</i></div>
+        <div class="col-2 "><img src="image/5.png" alt="logo discord" height="100px" width="100px"></div>
+        <div class="col-2 "><img src="image/6.png" alt="logo twitch" height="100px" width="100px"></div>
+        
+    </div>
+</div>
 </footer>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
